adding google genai + pinning versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,13 @@ dependencies = [
     # Jupyter support
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.6",
-    "langchain",
-    "langchain-openai",
-    "langchain-core",
-    "langchain-mcp-adapters",
-    "langgraph"]
+    "langchain==0.3.25",
+    "langchain-openai==0.3.16",
+    "langchain-core==0.3.59",
+    "langchain-mcp-adapters==0.0.9",
+    "langgraph==0.4.3",
+    "langchain-google-genai==2.0.10",
+    ]
 
 [tool.ruff]
 line-length = 79 
