update COURSE resources

--- a/typescript_mcp/package.json
+++ b/typescript_mcp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zoltanctoth-binancemcp",
+  "name": "zoltanctoth-course-binancemcp",
   "version": "1.0.0",
   "description": "MCP server that provides Binance price data",
   "main": "dist/binance_mcp.js",
