Adding Cloudflare code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,19 @@ dependencies = [
     "langchain-google-genai==2.0.10",
     ]
 
+[project.optional-dependencies]
+
+
 [tool.ruff]
 line-length = 79 
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.10",
+]
+
+smolagents = [
+    "torch",
+    "smolagents[mcp]",
+    "transformers",
+]
