--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "langchain-mcp-adapters==0.0.9",
     "langgraph==0.4.3",
     "langchain-google-genai==2.0.10",
-    ]
+    "black>=25.1.0",
+]
 
 [project.optional-dependencies]
 
@@ -36,4 +37,9 @@ smolagents = [
     "torch",
     "smolagents[mcp]",
     "transformers",
+]
+
+openai = [
+    "openai",
+    "openai-agents",
 ]
