--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@ activity.log
 __pycache__
 /.cursor/*
 .env.mine
-/dev
 node_modules
 *.tgz
 typescript_mcp/dist/
 typescript_mcp/node_modules/
+
+# Courseware dev
+/dev
+/.archive
