--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "MCP Course projects"
 requires-python = ">=3.10"
 dependencies = [
     # From binance-mcp
-    "mcp[cli]==1.6.0",
+    "mcp[cli]==1.9.2",
     "requests==2.32.3", # Also for llm-tool-use
     # From llm-tool-use
     "python-dotenv==1.1.0",
@@ -13,11 +13,11 @@ dependencies = [
     # Jupyter support
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.6",
-    "langchain==0.3.25",
-    "langchain-openai==0.3.16",
-    "langchain-core==0.3.59",
-    "langchain-mcp-adapters==0.0.9",
-    "langgraph==0.4.3",
+    "langchain==0.3.26",
+    "langchain-openai==0.3.27",
+    "langchain-core==0.3.68",
+    "langchain-mcp-adapters==0.1.9",
+    "langgraph==0.5.2",
     "langchain-google-genai==2.0.10",
     "black>=25.1.0",
 ]
@@ -42,4 +42,9 @@ smolagents = [
 openai = [
     "openai",
     "openai-agents",
+]
+
+ci = [
+    "pytest",
+    "pytest-dotenv",
 ]
