--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
-          pytest test.py 
+          pytest .github/test.py 
